Add equations for microdecision

--- a/theory.ipynb
+++ b/theory.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are two types of choices to be made in Kniffel. The first is the choice of dice to reroll, which happens twice during the turn. We will call this the microdecision. It is a short term consideration of which dice rolls can be achieved, and how to maximize the probability of a desired result. The other type of choice is called the macrodecision. It is the long term consideration of which results should be aimed for to maximize the final score. This comes into play at different times, firstly to inform the microdecisions and secondly to choose which field on the score card to fill in at the end of a turn."
+    "There are two types of choices to be made in Kniffel. The first is the choice of dice to reroll, which happens twice during the turn. We will call this the microdecision. It is a short term consideration of how to maximize the probability of a desired result. The other type of choice is called the macrodecision. It is the long term consideration of which results should be aimed for to maximize the final score. This comes into play at different times, firstly to inform the microdecisions and secondly to choose which field on the score card to fill in at the end of a turn."
    ]
   },
   {
@@ -33,6 +33,23 @@
    "metadata": {},
    "source": [
     "The microdecision is the simpler part of the program. All that needs to be done here is to calculate the highest possible probability of a dice result at the end of the turn and the associated choice of dice to reroll. The probability can then be multiplied with the expectation value given by the macrodecision for that dice result, and the best option chosen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The strategy to maximize the chance of getting some result is simple: Keep the dice that match the desired result and reroll the others. If there is only one reroll left, the probability of getting the result is\\\n",
+    "$P(R_{desired},R_{now})=\\frac{n_{reroll}!}{6^{n_{reroll}}}$,\\\n",
+    "where $n_{reroll}$ is the number of dice that need to be rerolled and $R_{desired}$ and $R_{now}$ are the desired and current result, respectively."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If there are two rerolls left, the probability is given by the combination of intermediate results $R_i$ after the first reroll, that are possible with a given choice of dice to keep:\\\n",
+    "$P(R_{desired},R_{now})=\\sum_iP(R_i,R_{now})P(R_{desired},R_i)$."
    ]
   },
   {
